# nlife

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md  build.rs
.claude/: settings.json  settings.local.json
.claude/hooks/: check-docs.sh
.github/workflows/: ci.yml  release.yml
benches/: step.rs
src/: app.rs  camera.rs  grid.rs  hashlife.rs  input.rs  library.rs  main.rs  patterns.rs  rle.rs  simulation.rs
src/patterns/gun/: gosper_glider_gun.rle
src/patterns/methuselah/: acorn.rle  diehard.rle  r-pentomino.rle
src/patterns/oscillator/: beacon.rle  blinker.rle  figure_eight.rle  mold_on_candlefrobra.rle  pentadecathlon.rle  pulsar.rle  queen_bee_shuttle.rle  toad.rle
src/patterns/spaceship/: 43P4H2V0.rle  HWSS.rle  LWSS.rle  MWSS.rle  canada_goose.rle  copperhead.rle  glider.rle
src/patterns/still_life/: beehive.rle  block.rle  boat.rle  loaf.rle  long_boat.rle  pond.rle  ship.rle  tub.rle
src/ui/: browser.rs  grid_view.rs  mod.rs  panel.rs
