[package]
name    = "newlife"
version = "1.2.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts", "wgpu", "wayland",
] }
egui  = "0.33"
rayon = "1"
rfd = "0.17"
rustc-hash = "2"
# Re-enable the Vulkan backend: egui-wgpu 0.33 pulls wgpu with
# default-features = false, so no GPU backend is compiled in otherwise.
wgpu  = { version = "27", features = ["vulkan"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name    = "step"
harness = false

[profile.release]
opt-level     = 3        # maximum optimisation
lto           = "fat"    # cross-crate link-time optimisation
codegen-units = 1        # single codegen unit enables more inlining
panic         = "abort"  # smaller binary, no unwinding overhead
strip         = true     # strip debug symbols from release binary

[profile.bench]
# Inherits release (opt-level=3, lto, codegen-units=1) but keeps symbols for perf.
strip = false
debug = 1
